# figen

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE-MIT  README.md
proc-macro/: Cargo.toml  README.md
proc-macro/src/: lib.rs  registry.rs
proc-macro/src/registry/: parser.rs
scripts/: check-release-version-test.sh  check-release-version.sh
src/: binder.rs  error.rs  lib.rs  loader.rs  registry.rs
tests/: array_ref_tests.rs  config_derive_tests.rs  config_registry_tests.rs  default_derive_tests.rs
tests/utils/: mod.rs
