[package]
name = "figen"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { git = "https://github.com/rustyflight/heapless.git", branch = "box_support_raw" }
figen-proc-macros = {  path = "./proc-macro" }
log = "0.4.27"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
lazy_static = {  version = "1.5.0", optional = true }

[dev-dependencies]
serde_json = "1.0.142"

[features]
std = ["figen-proc-macros/std", "lazy_static"]
serde = ["figen-proc-macros/serde"]

[profile.test]
features = ["std", "serde"]
