[package]
name = "figen-proc-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macro implementation for the figen configuration library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustyflight/figen"
homepage = "https://github.com/rustyflight/figen"
documentation = "https://docs.rs/figen-proc-macros"
readme = "README.md"
keywords = ["configuration", "embedded", "macros"]
categories = ["config"]
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {  version = "2.0.104", features = ["full"] }
stringcase = "0.4.0"

[features]
std = []
serde = []
